tests/copies/newAndNeedChangeTests/pass/LeftBitShiftAssign.java
package pass;

public class LeftBitShiftAssign {
  public int leftBitShiftAssign(int number, int number2) {
    return number <<= number2;
  }
}
