tests/copies/newAndNeedChangeTests/fail/LeftBitShiftAssign.java
package fail;

import java.lang.System;

public class LeftBitShiftAssign {

  public static void main(String[] args ) {
    int x = 4;
    x <<= "Hello";
  }

}
